issue #1: added model Package

--- a/Pipfile
+++ b/Pipfile
@@ -4,11 +4,23 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "*"
 requests = "*"
 cuid = "*"
+Django = "*"
+invoke = "*"
+twine = "*"
+"zest.releaser" = "*"
+mypy = "*"
+django-stubs = "*"
+coverage = "==4.4.1"
+mock = ">=1.0.1"
+flake8 = ">=2.1.0"
+tox = ">=1.7.0"
+codecov = ">=2.0.0"
+factory-boy = "*"
 
 [dev-packages]
+factory-boy = "*"
 
 [requires]
 python_version = "3.8"
